--- a/src/App.css
+++ b/src/App.css
@@ -190,7 +190,9 @@ h1, h2, h3, h4, h5, h6, p {
 /* confetti */
 body {
     margin: 0;
-    overflow: hidden;
+/*    overflow: hidden;*/
+    min-height: 100%;
+    height: auto;
 }
 
 .wrapper {
