--- a/src/components/invite/Invite.module.css
+++ b/src/components/invite/Invite.module.css
@@ -58,17 +58,21 @@ div.inviteWrapper .inviteInfo {
 }
 
 div.inviteWrapper .inviteInfo section {
-    padding-top: 40px;;
+    padding-top: 40px;
+    text-align: right;
 }
 
 div.inviteWrapper .inviteInfo section span.title {
     display: block;
     font-size: 18px;
     margin-bottom: 8px;
+    border-bottom: 1px solid #d9d9d95c;
+    text-align: left;
 }
 
 div.inviteWrapper .inviteInfo section time {
-    display: inline-block;
+/*    display: inline-block;*/
+    display: block;
 }
 
 div.inviteWrapper .inviteInfo section p {
