--- a/src/components/invite/Invite.module.css
+++ b/src/components/invite/Invite.module.css
@@ -25,7 +25,7 @@ div.inviteWrapper .archWrapper p {
 
 div.inviteWrapper .archWrapper p.large {
     color: black;
-    font-size: 4rem;
+    font-size: 3rem;
     line-height: 1.2;
 }
 
@@ -89,4 +89,51 @@ div.inviteWrapper .inviteInfo section .contentDivider time {
 
 p.center {
     text-align: center;
+}
+
+svg.flower {
+    position: absolute;
+    left: -1%;
+    height: 100%;
+}
+
+svg .illustration {
+    animation: squigglevision 0.5s infinite alternate;
+}
+
+@keyframes squigglevision {
+    0% {
+        filter: url('#sketch-0');
+    }
+  25% {
+        filter: url('#sketch-1');
+    }
+  50% {
+        filter: url('#sketch-2');
+    }
+  75% {
+        filter: url('#sketch-3');
+    }
+  100% {
+        filter: url('#sketch-4');
+    }
+}
+
+svg .path {
+    stroke-dasharray: 1;
+    stroke-dashoffset: 1;
+    animation: paint 1s ease-in-out 1s forwards;
+}
+
+svg .path:nth-of-type(2) {
+    animation-delay: 2s;
+}
+
+@keyframes paint {
+    from {
+        stroke-dashoffset: 1;
+    }
+  to {
+        stroke-dashoffset: 0;
+    }
 }
