--- a/src/components/invite/Invite.module.css
+++ b/src/components/invite/Invite.module.css
@@ -77,6 +77,7 @@ div.inviteWrapper .inviteInfo section time {
 
 div.inviteWrapper .inviteInfo section p {
     margin-top: 0;
+    width: 100%;
 }
 
 div.inviteWrapper .inviteInfo section .contentDivider {
